# MaterialBinLoader-Win10

./: .gitignore  CMakeLists.txt  MaterialBinLoader.sln  README.md
Injector/: CMakeLists.txt  Injector.vcxproj  main.cpp
MaterialBinLoader/: CMakeLists.txt  Hook.cpp  HookAPI.h  MaterialBinLoader.vcxproj  MaterialBinLoader.vcxproj.filters  Plugin.cpp  Plugin.h
MaterialBinLoader/Hook/: Hook.cpp  Hook.h  MemoryUtils.h
